[project]
name = "innsight-flask"
version = "0.1.0"
description = ""
authors = [
    {name = "cshif",email = "5175166+cshif@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-limiter (>=4.1.1,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "innsight_flask", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
